ai-governance-dashboard/jhb-streampulse/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jhb-streampulse
  labels:
    name: jhb-streampulse
    environment: production
